--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,23 @@
-title: Hello, world! I'm David Freeman
+title: Sergi Caelles
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "/flexible-jekyll" # the subpath of your site, e.g. /blog
+baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
-author: David Freeman # add your name
-author-img: david-freeman.jpg # add your photo
-about-author: I am a web developer focusing on front-end development. Always hungry to keep learning. # add description
-social-twitter: # add your Twitter handle
+author: Sergi Caelles # add your name
+author-img: sergi-caelles.jpg # add your photo
+about-author: I am a Computer Vision PhD student at ETH Zurich. # add description
+social-twitter: skprat # add your Twitter handle
+google-scholar: 4C59xWsAAAAJ&hl
 social-facebook: # add your Facebook handle
-social-github: artemsheludko # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+social-github: scaelles # add your Github handle
+social-linkedin: sergicaelles # add your Linkedin handle
+social-email: scaelles@vision.ee.ethz.ch # add your Email address
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
