--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,8 +1,54 @@
-- name: Eric Mill
-  github: konklone
+- name: "Deep extreme cut: From extreme points to object segmentation"
+  url: "http://www.vision.ee.ethz.ch/~cvlsegmentation/dextr/"
+  authors: "K.-K. Maninis*, <b>S. Caelles*</b>, J. Pont-Tuset, L. Van Gool"
+  publication: "Computer Vision and Pattern Recognition (CVPR), 2018"
+  url_code: "https://github.com/scaelles/DEXTR-PyTorch"
+  url_paper: "http://openaccess.thecvf.com/content_cvpr_2018/papers/Maninis_Deep_Extreme_Cut_CVPR_2018_paper.pdf"
+  image: dextr.jpg
 
-- name: Parker Moore
-  github: parkr
+- name: "The 2018 DAVIS Challenge on Video Object Segmentation"
+  url: "https://davischallenge.org/challenge2018/index.html"
+  authors: "<b>S. Caelles</b>, A. Montes, K.-K. Maninis, Y. Chen, L. Van Gool, F. Perazzi, J. Pont-Tuset"
+  publication: "arXiv:1803.00557, 2018"
+  url_pdf: "https://arxiv.org/pdf/1803.00557"
+  image: davis-2018.jpg
 
-- name: Liu Fengyun
-  github: liufengyun
+- name: "Video Object Segmentation Without Temporal Information"
+  url: "http://www.vision.ee.ethz.ch/~cvlsegmentation/dextr/"
+  authors: "K.-K. Maninis*, <b>S. Caelles*</b>, Y. Chen, J. Pont-Tuset, L. Leal-Taixe, D. Cremers, L. Van Gool"
+  publication: "IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2018"
+  url_paper: "https://ieeexplore.ieee.org/document/8362936/"
+  image: osvoss.png
+
+- name: "Iterative Deep Learning for Road Topology Extraction"
+  url: "https://carlesventura.github.io/iterative-dl-road-website/"
+  authors: "C. Ventura, J. Pont-Tuset, <b>S. Caelles</b>, Y. Chen, K.-K. Maninis,  L. Van Gool"
+  publication: "British Machine Vision Conference (BMVC), 2018"
+  url_code: "https://github.com/carlesventura/iterative-deep-learning"
+  url_paper: "http://bmvc2018.org/contents/papers/0905.pdf"
+  image: roads-qualitative-results.png
+
+- name: "The 2017 DAVIS Challenge on Video Object Segmentation"
+  url: "https://davischallenge.org/challenge2017/index.html"
+  authors: "J. Pont-Tuset, F. Perazzi, <b>S. Caelles</b>, P. Arbelaez, A. Sorkine-Hornung, L. Van Gool"
+  publication: "arXiv:1704.00675, 2017"
+  url_pdf: https://arxiv.org/abs/1704.00675"
+  image: davis-2017.jpg
+
+- name: "One-Shot Video Object Segmentation"
+  url: "http://www.vision.ee.ethz.ch/~cvlsegmentation/osvos/"
+  authors: "<b>S. Caelles*</b>, K.-K. Maninis*, J. Pont-Tuset, L. Leal-Taixe, D. Cremers, L. Van Gool"
+  publication: "Computer Vision and Pattern Recognition (CVPR), 2017"
+  url_code: "https://github.com/scaelles/OSVOS-TensorFlow"
+  url_paper: http://openaccess.thecvf.com/content_cvpr_2017/papers/Caelles_One-Shot_Video_Object_CVPR_2017_paper.pdf
+  image: osvos.png
+
+
+
+# - name: ""
+  # url: ""
+  # authors: ""
+  # publication: ""
+  # url_code: ""
+  # url_pdf: ""
+  # image: 
