Fixed type citation

--- a/_data/latest_news.yml
+++ b/_data/latest_news.yml
@@ -10,5 +10,5 @@
 - text: 'Our extension of OSVOS, <a href="http://people.ee.ethz.ch/~cvlsegmentation/osvos-s/">OSVOS-S</a>, has been accepted by TPAMI!'
   date: "May  2018"
 
-- text: '<a href="http://www.vision.ee.ethz.ch/~cvlsegmentation/dextr/">Deep Extreme Cut</a> was accepted at CVPR 2018!'
+- text: '<a href="http://www.vision.ee.ethz.ch/~cvlsegmentation/dextr/">Deep Extreme Cut (DEXTR)</a> was accepted at CVPR 2018!'
   date: "Mar 2018"
