--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ site-twitter: #if your site has a twitter account, enter it here
 # Author Settings
 author: Sergi Caelles # add your name
 author-img: sergi-caelles.jpg # add your photo
-about-author: Computer Vision PhD student at ETH Zurich. # add description
+about-author: Computer Vision PhD student at ETH Zurich # add description
 social-twitter: skprat # add your Twitter handle
 google-scholar: 4C59xWsAAAAJ&hl
 social-facebook: # add your Facebook handle
