Refinement project descriptions

--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,5 +1,5 @@
 - title: 'Pineapple'
-  description: 'The app allows placing virtual food on your yet empty plate in a restaurant — so that you can always see what you get before you order it!'
+  description: 'App that allows placing virtual food on your yet empty plate in a restaurant — so that you can always see what you get before you order it!'
   location: 'HackZurich 2017'
   url: 'https://devpost.com/software/pineapple-v7e1jm'
   video_url: 'https://www.youtube.com/watch?v=ugE5GQb0FXQ'
@@ -9,7 +9,7 @@
     - "https://www.startupticker.ch/en/news/september-2017/vom-hack-zur-app"
 
 - title: 'Well2Go'
-  description: ' Project carried out in collaboration with ESADE and IED students to improve public health by providing safe access to water. We developed a sensor network able to detect the state of the wells in developing countries, bringing real time information to a platform to ensure their maintenance. The project was the winner of the CBI Mediterranean 2015.'
+  description: 'Project carried out in collaboration with ESADE and IED students to improve public health by providing safe access to water. We developed a sensor network able to detect the state of the wells in developing countries, bringing real time information to a platform to ensure their maintenance. The project was the winner of the CBI Mediterranean 2015.'
   location: 'Challenge Based Innovation, IdeaSquare CERN 2016'
   url: 'http://projects.cbi-course.com/otw_pm_portfolio/team-planck-well2go-2015/'
   video_url: 'https://www.youtube.com/watch?time_continue=156&v=YzfT-JAuRr4'
@@ -19,7 +19,7 @@
     - https://enginyeriafisica.etsetb.upc.edu/ca/tambe/noticies/LV24des15.pdf
 
 - title: 'CtiyFlow'
-  description: 'CityFlow was a project to provide real-time information about the hot areas in Barcelona, based on the information given by the geolocalization of Instagram posts uploaded in the city. Our project was selected for the Global Urban DataFest Contest'
+  description: 'Platform that provids real-time information about hot areas in Barcelona, based on the information given by the geolocalization of Instagram posts uploaded in the city. It was selected for the Global Urban DataFest Contest.'
   location: 'Barcelona Smart Cities Hackathon 2015'
   url: "http://www.global.datafest.net/a/datafest.net/globalurbandatafest/projects/cityflow"
   video_url: "https://www.youtube.com/watch?v=L76xawJMdOE"
