--- a/_data/latest_news.yml
+++ b/_data/latest_news.yml
@@ -1,4 +1,4 @@
-- text: 'We have published all the details for <a href="https://davischallenge.org/challenge2019/index.html ">DAVIS 2019 Challenges</a>.'
+- text: 'We have published all the details for <a href="https://davischallenge.org/challenge2019/index.html target="_blank"">DAVIS 2019 Challenges</a>.'
   date: "Mar 2019"
 
 - text: 'We have release all the object categories for <a href="https://davischallenge.org/davis2017/code.html#semantics">DAVIS 2017</a>.'
