--- a/_data/latest_news.yml
+++ b/_data/latest_news.yml
@@ -1,4 +1,4 @@
-- text: 'I am interning in the Perception team at <a href="https://ai.google//">Google AI</a> until November 2019.'
+- text: 'I am interning in the Perception team at <a href="https://research.google/">Google Research</a> until November 2019.'
   date: "Jul 2019"
 
 - text: 'We have published all the details for <a href="https://davischallenge.org/challenge2019/index.html target="_blank"">DAVIS 2019 Challenges</a>.'
