--- a/_data/latest_news.yml
+++ b/_data/latest_news.yml
@@ -1,3 +1,6 @@
+- text: 'I joined the Perception team at <a href="https://research.google/">Google Research</a> as a Research Scientist.'
+  date: "Jul 2020"
+  
 - text: 'I am interning in the Perception team at <a href="https://research.google/">Google Research</a> until November 2019.'
   date: "Jul 2019"
 
