Cypher email address to avoid spam.

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ google-scholar: 4C59xWsAAAAJ&hl
 social-facebook: # add your Facebook handle
 social-github: scaelles # add your Github handle
 social-linkedin: sergicaelles # add your Linkedin handle
-social-email: scaelles@google.com # add your Email address
+social-email:  "fpnryyrf@tbbtyr.pbz" # add your Email address encrypted in ROT13, currently not used and hardcoded
 
 # Disqus
 discus-identifier: mr-brown # add your discus identifier
